# MCPPortal

./: .env.example  .env.production.example  .gitignore  LICENSE  README.md  mcp_config.json  mcp_integrated_config.json  pyproject.toml  requirements.txt  run-docker.py  run-docker.sh  sse_config.json  test_integrated_mcp.py  test_mcp_connection.py  test_stdio_connector.py
docker/: .dockerignore  Dockerfile  README.md  build.sh  docker-compose.prod.yml  docker-compose.yml  nginx.conf
mcp_gateway/: __init__.py  main.py  mcp_server.py
mcp_gateway/api/: __init__.py  dependencies.py  middleware.py  routes.py  server_management.py
mcp_gateway/config/: __init__.py  settings.py
mcp_gateway/core/: __init__.py  aggregator.py  discovery.py  gateway.py  mcp_transport.py  process_manager.py  settings_discovery.py  unified_transport.py
mcp_gateway/models/: __init__.py  gateway.py  mcp.py  responses.py
mcp_gateway/ui/: __init__.py  sse.py
mcp_gateway/ui/static/: index.html  script.js  styles.css
mcp_gateway/utils/: __init__.py  logging.py  validation.py
tests/: __init__.py  conftest.py  test_aggregator.py  test_api.py  test_discovery.py  test_gateway.py  test_sse.py
